--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -162,7 +162,7 @@
                 <!-- System Health & Volume -->
 
                 <!-- Interactive Analytics Grid (6 Standardized Charts) -->
-                <h3>System Analytics</h3>
+                <h3 style="margin-top: 3rem; margin-bottom: 2rem;">System Analytics</h3>
                 <div class="grid"
                     style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem; margin-bottom: 2rem;">
                     <div class="card">
@@ -1119,6 +1119,46 @@
                     </div>
                 </div>
             </div>
+            <footer style="margin-top: 3rem; border-top: 1px solid var(--border); padding: 2rem 1rem;">
+                <div style="max-width: 100%; margin: 0; padding: 0 1rem;">
+                    <div class="footer-grid">
+                        <div class="footer-col">
+                            <h3>IT SQUAD</h3>
+                            <p style="color: var(--text-muted); margin: 0;">Empowering businesses with top-tier IT support and infrastructure management.</p>
+                        </div>
+                        <div class="footer-col">
+                            <h3>Quick Links</h3>
+                            <ul style="list-style: none; padding: 0; margin: 0;">
+                                <li style="margin-bottom: 0.5rem;"><a href="index.html">Home</a></li>
+                                <li style="margin-bottom: 0.5rem;"><a href="about.html">About Us</a></li>
+                                <li style="margin-bottom: 0.5rem;"><a href="services.html">Services</a></li>
+                                <li style="margin-bottom: 0.5rem;"><a href="contact.html">Contact</a></li>
+                                <li style="margin-bottom: 0.5rem;"><a href="blog.html">Blog</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-col">
+                            <h3>Services</h3>
+                            <ul style="list-style: none; padding: 0; margin: 0;">
+                                <li style="margin-bottom: 0.5rem;"><a href="service-details.html">Help Desk</a></li>
+                                <li style="margin-bottom: 0.5rem;"><a href="service-details.html">Cyber Security</a></li>
+                                <li style="margin-bottom: 0.5rem;"><a href="service-details.html">Cloud Migration</a></li>
+                                <li style="margin-bottom: 0.5rem;"><a href="service-details.html">Network Setup</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-col">
+                            <h3>Contact</h3>
+                            <ul style="list-style: none; padding: 0; margin: 0;">
+                                <li style="margin-bottom: 0.5rem;"><i class='bx bx-map'></i> 123 Innovation Drive, Tech City, CA</li>
+                                <li style="margin-bottom: 0.5rem;"><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
+                                <li style="margin-bottom: 0.5rem;"><i class='bx bx-envelope'></i> support@itsquad.com</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="copyright" style="text-align: center; padding-top: 2rem; border-top: 1px solid var(--border); margin-top: 2rem;">
+                        <p style="margin: 0;">&copy; 2026 IT SQUAD. All rights reserved.</p>
+                    </div>
+                </div>
+            </footer>
         </main>
     </div>
     <div id="add-user-modal" class="modal-overlay"
@@ -1145,6 +1185,7 @@
             </form>
         </div>
     </div>
+
     <script src="main.js"></script>
     <script src="rtltoggle.js"></script>
     <div class="sidebar-overlay"></div>
